--- a/examples/mfa_demo/src/main/AndroidManifest.xml
+++ b/examples/mfa_demo/src/main/AndroidManifest.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.USE_BIOMETRIC" />
+
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.IBMSecurityVerifySDK">
+        android:theme="@style/Theme.IBMVerifySDK">
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="MainActivity"
-            android:theme="@style/Theme.IBMSecurityVerifySDK" >
+            android:theme="@style/Theme.IBMVerifySDK" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
