--- a/examples/fido2_demo/src/main/AndroidManifest.xml
+++ b/examples/fido2_demo/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.IBMSecurityVerifySDK">
+        android:theme="@style/Theme.IBMVerifySDK">
         <activity
             android:name=".AuthenticationResultActivity"
             android:exported="false" />
