--- a/examples/mfa_demo/src/main/AndroidManifest.xml
+++ b/examples/mfa_demo/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="MainActivity"
+            android:label="@string/app_name"
             android:theme="@style/Theme.IBMVerifySDK" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
