--- a/common-config-ktor.gradle
+++ b/common-config-ktor.gradle
@@ -1,4 +1,7 @@
 dependencies {
+    implementation libs.google.material
+}
+dependencies {
     implementation(libs.ktor.client.android)
     implementation(libs.ktor.client.auth)
     implementation(libs.ktor.client.cio)
