--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -51,6 +51,7 @@ versioningPluginVersion = "2.0.0"
 zxingAndroidEmbeddedVersion = "4.3.0"
 adaptiveNavigationSuite = "1.3.1"
 navigationComposeVersion = "2.8.7"
+materialVersion = "1.13.0"
 
 [libraries]
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityComposeVersion" }
@@ -121,6 +122,7 @@ slf4j-android = { group = "org.slf4j", name = "slf4j-android", version.ref = "sl
 slf4j-api= { group = "org.slf4j", name = "slf4j-api", version.ref = "slf4jVersion" }
 versioning-plugin = { group = "org.jetbrains.dokka", name = "versioning-plugin", version.ref = "versioningPluginVersion" }
 zxing-android-embedded = { group = "com.journeyapps", name = "zxing-android-embedded", version.ref = "zxingAndroidEmbeddedVersion" }
+google-material = { group = "com.google.android.material", name = "material", version.ref = "materialVersion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
