--- a/common-config-demos.gradle
+++ b/common-config-demos.gradle
@@ -1,11 +1,11 @@
 android {
-    compileSdk = 35
+    compileSdk = 36
 
     defaultConfig {
         minSdk = 29
-        targetSdk = 35
-        versionCode = 5
-        versionName = "1.2.2"
+        targetSdk = 36
+        versionCode = 6
+        versionName = "1.3.0"
 
         testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -19,20 +19,30 @@ android {
     }
 
     buildFeatures.buildConfig = true
+
+    packaging {
+        resources {
+            excludes += "/META-INF/{AL2.0,LGPL2.1}"
+            excludes += "META-INF/versions/9/OSGI-INF/MANIFEST.MF"
+        }
+    }
 }
 
 dependencies {
+
+    // SLF4J Simple logger for SLF4J 2.x (outputs to System.err which Android redirects to Logcat)
+    implementation(libs.slf4j.simple)
 
     implementation(libs.androidx.activity.compose)
     implementation(libs.androidx.appcompat)
     implementation(libs.androidx.core.ktx)
     implementation(libs.androidx.lifecycle.runtime.ktx)
     implementation(libs.androidx.navigation.compose)
+    implementation libs.google.material
     implementation(libs.kotlinx.serialization.json)
     implementation(libs.materialx)
-    implementation(libs.slf4j.android)
+    implementation(libs.androidx.compose.material.icons.extended)
 
     testImplementation(libs.junit)
     androidTestImplementation(libs.androidx.junit)
-    androidTestImplementation(libs.slf4j.android)
 }
