--- a/examples/authcodeflow_demo/src/main/AndroidManifest.xml
+++ b/examples/authcodeflow_demo/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -17,6 +18,25 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.ibm.security.verifysdk.authentication.AuthenticationActivity"
+            android:exported="true"
+            android:launchMode="singleTop"
+            tools:node="replace">
+
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+
+                <data
+                    android:scheme="${auth_redirect_scheme}"
+                    android:host="${auth_redirect_host}"
+                    android:pathPrefix="${auth_redirect_path}"/>
+            </intent-filter>
+
         </activity>
     </application>
 
