--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,56 +1,52 @@
 [versions]
-activityComposeVersion = "1.10.0"
+activityComposeVersion = "1.12.1"
 agp = "8.2.1"
-appcompat = "1.7.0"
+appcompat = "1.7.1"
 biometric = "1.2.0-alpha05"
-browser = "1.8.0"
-composeBom = "2025.02.00"
-compose-compiler = "1.5.11"
+browser = "1.9.0"
+compose-compiler = "1.9.3"
+composeBom = "2025.12.00"
 composeLintChecksVersion = "1.4.2"
-constraintlayout = "2.1.4"
-coreKtx = "1.13.1"
-dokka = "2.0.0"
-espressoCore = "3.6.1"
+constraintlayout = "2.2.1"
+coreKtx = "1.17.0"
+dokka = "2.1.0"
+espressoCore = "3.7.0"
 fuelAndroid = "2.3.1"
-jackson = "2.15.3"
-jetbrainsKotlinJvmVersion = "2.1.0"
+jackson = "2.20.1"
+jetbrainsKotlinJvmVersion = "2.2.21"
 jose4j = "0.9.6"
 jsonassert = "2.0-rc1"
 junit = "4.13.2"
-junitKtx = "1.2.0"
-junitVersion = "1.2.1"
-kotlin = "2.1.0"
-kotlinxCoroutinesAndroid = "1.8.1"
-kotlinxCoroutinesCore = "1.8.1"
-kotlinxCoroutinesTest = "1.8.1"
-kotlinxDatetime = "0.6.0"
-kotlinxSerializationJson = "1.6.3"
-ksp = "2.1.0-1.0.29"
-ktor = "3.1.1"
-lifecycleLivedata = "2.8.7"
-lifecycleProcess = "2.8.7"
-lintChecksAndroidVersion = "0.1.1"
+junitVersion = "1.3.0"
+kotlin = "2.2.21"
+kotlinxCoroutines = "1.10.2"
+kotlinxDatetime = "0.7.1"
+kotlinxSerializationJson = "1.9.0"
+ksp = "2.2.21-2.0.4"
+ktor = "3.3.3"
+lifecycleLivedata = "2.10.0"
+lifecycleProcess = "2.10.0"
 lintChecksVersion = "0.1.1"
-loggingInterceptor = "4.12.0"
-material = "1.12.0"
-material3 = "1.3.1"
-materialx = "1.5.0"
-material3AdaptiveVersion = "1.0.0"
-mockitoKotlin = "5.3.1"
-mockwebserver = "4.12.0"
-monitorVersion = "1.7.2"
-nimbusJoseJwt = "10.0.2"
-roomVersion = "2.6.1"
-rootCoverage = "1.9.0"
+loggingInterceptor = "5.3.2"
+material3 = "1.4.0"
+material3AdaptiveVersion = "1.2.0"
+materialIconsExtendedVersion = "1.7.8"
+materialVersion = "1.13.0"
+materialx = "1.10.0"
+mockitoKotlin = "6.1.0"
+mockwebserver = "5.3.2"
+navigationComposeVersion = "2.9.6"
+nimbusJoseJwt = "10.6"
+roomVersion = "2.8.4"
+rootCoverage = "1.11.0"
 rootbeerLib = "0.1.1"
-rules = "1.6.0"
-runtimeLivedata = "1.7.8"
-slackLintChecksVersion = "0.9.0"
-slf4jVersion = "1.7.36"
-versioningPluginVersion = "2.0.0"
+rules = "1.7.0"
+runtimeLivedata = "1.10.0"
+slackLintChecksVersion = "0.11.1"
+slf4jSimpleVersion = "2.0.17"
+slf4jVersion = "2.0.17"
+versioningPluginVersion = "2.1.0"
 zxingAndroidEmbeddedVersion = "4.3.0"
-adaptiveNavigationSuite = "1.3.1"
-navigationComposeVersion = "2.8.7"
 
 [libraries]
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityComposeVersion" }
@@ -58,11 +54,12 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 androidx-biometric = { group = "androidx.biometric", name = "biometric", version.ref = "biometric" }
 androidx-browser = { group = "androidx.browser", name = "browser", version.ref = "browser" }
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
+androidx-compose-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtendedVersion" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
-androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitKtx" }
+androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitVersion" }
 androidx-lifecycle-process = { group = "androidx.lifecycle", name = "lifecycle-process", version.ref = "lifecycleProcess" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleProcess" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
@@ -90,9 +87,9 @@ jackson-module-kotlin = { group = "com.fasterxml.jackson.module", name = "jackso
 jose4j = { group = "org.bitbucket.b_c", name = "jose4j", version.ref = "jose4j" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter" }
-kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "kotlinxCoroutinesAndroid" }
-kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinxCoroutinesCore" }
-kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
+kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "kotlinxCoroutines" }
+kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinxCoroutines" }
+kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlinxCoroutines" }
 kotlinx-datetime = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime", version.ref = "kotlinxDatetime" }
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 ktor-client-android = { group = "io.ktor", name = "ktor-client-android", version.ref = "ktor" }
@@ -107,9 +104,8 @@ ktor-client-serialization = { group = "io.ktor", name = "ktor-client-serializati
 ktor-serialization-kotlinx-json = { group = "io.ktor", name = "ktor-serialization-kotlinx-json", version.ref = "ktor" }
 lifecycle-livedata-ktx = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycleLivedata" }
 lint-checks = { module = "com.uber.lint-checks:lint-checks", version.ref = "lintChecksVersion" }
-lint-checks-android = { module = "com.uber.lint-checks:lint-checks-android", version.ref = "lintChecksAndroidVersion" }
+lint-checks-android = { module = "com.uber.lint-checks:lint-checks-android", version.ref = "lintChecksVersion" }
 logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "loggingInterceptor" }
-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 materialx = { group = "androidx.compose.material", name = "material", version.ref = "materialx" }
 mockito-kotlin = { group = "org.mockito.kotlin", name = "mockito-kotlin", version.ref = "mockitoKotlin" }
 mockwebserver = { group = "com.squareup.okhttp3", name = "mockwebserver", version.ref = "mockwebserver" }
@@ -117,10 +113,12 @@ nimbus-jose-jwt = { module = "com.nimbusds:nimbus-jose-jwt", version.ref = "nimb
 rootbeer-lib = { group = "com.scottyab", name = "rootbeer-lib", version.ref = "rootbeerLib" }
 skyscreamer-jsonassert = { group = "org.skyscreamer", name = "jsonassert", version.ref = "jsonassert" }
 slack-lint-checks = { module = "com.slack.lint:slack-lint-checks", version.ref = "slackLintChecksVersion" }
-slf4j-android = { group = "org.slf4j", name = "slf4j-android", version.ref = "slf4jVersion" }
+#slf4j-android = { group = "org.slf4j", name = "slf4j-android", version.ref = "slf4jVersion" }
 slf4j-api= { group = "org.slf4j", name = "slf4j-api", version.ref = "slf4jVersion" }
+slf4j-simple = { module = "org.slf4j:slf4j-simple", version.ref = "slf4jSimpleVersion" }
 versioning-plugin = { group = "org.jetbrains.dokka", name = "versioning-plugin", version.ref = "versioningPluginVersion" }
 zxing-android-embedded = { group = "com.journeyapps", name = "zxing-android-embedded", version.ref = "zxingAndroidEmbeddedVersion" }
+google-material = { group = "com.google.android.material", name = "material", version.ref = "materialVersion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
