--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,6 @@ android.nonTransitiveRClass=true
 
 android.enableR8.fullMode=true
 android.enableJetifier=false
+
+# Keep Dokka in V1 compatibility mode until full migration to V2
+org.jetbrains.dokka.experimental.gradle.pluginMode=V1
