--- a/common-config.gradle
+++ b/common-config.gradle
@@ -21,8 +21,7 @@ android {
         }
         named("debug") {
             enableUnitTestCoverage = true
-            // Disable androidTest coverage to avoid Jacoco transformation issues with byte-buddy
-            enableAndroidTestCoverage = false
+            enableAndroidTestCoverage = true
         }
     }
 
