chore: update versions and add renderscript config
Update versionName and versionCode for the main project and demos to prepare for a new release. Add a configuration in gradle.properties to suppress obsolete DSL element warnings for 'renderscript'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -27,3 +27,6 @@ android.enableJetifier=false
 
 # Keep Dokka in V1 compatibility mode until full migration to V2
 org.jetbrains.dokka.experimental.gradle.pluginMode=V1
+
+# Suppress obsolete DSL element warnings for renderscript (not used in this project)
+android.defaults.buildfeatures.renderscript=false
