fix: add GitHub release artifact paths (#81)
* fix: add GitHub release artifact paths

Update artifact paths in the GitHub Actions workflow to include additional artifacts from the local Maven repository.

* fix: update emulator settings in GH Actions workflow

This update aims to increase stability and speed of connected tests.

* chore: release/3.1.0 sync main (#82)

* fix: add GitHub release artifact paths

Update artifact paths in the GitHub Actions workflow to include additional artifacts from the local Maven repository.

* fix: update emulator settings in GH Actions workflow

This update aims to increase stability and speed of connected tests.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -172,10 +172,17 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 29
-          target: default
           arch: x86_64
-          profile: Nexus 6
-          script: ./gradlew --parallel --build-cache connectedDebugAndroidTest
+          target: google_apis
+          profile: pixel_3a
+          disable-animations: true
+          emulator-options: -no-window -no-audio -no-snapshot -no-boot-anim -gpu swiftshader_indirect
+          emulator-boot-timeout: 900
+          script: |
+            adb wait-for-device
+            adb shell getprop sys.boot_completed || true
+            adb shell getprop ro.build.version.sdk || true
+            ./gradlew --build-cache connectedDebugAndroidTest
 
       - name: Store build outputs + reports
         uses: actions/upload-artifact@v4.3.1
@@ -381,7 +388,10 @@ jobs:
           files: |
             ./sdk/**/build/outputs/aar/*.aar
             ./sdk/**/build/reports/*.html
-            ./sdk/maven/*.*
+            ~/.m2/repository/com/github/ibm-verify/**/*.aar
+            ~/.m2/repository/com/github/ibm-verify/**/*.pom
+            ~/.m2/repository/com/github/ibm-verify/**/*.module
+            ~/.m2/repository/com/github/ibm-verify/**/*.jar
             ./sdk/IBM-Verify-SDK_code-coverage-report.zip
 
   job_summary:
