fix: update build paths for compatibility
Update paths in the GitHub Actions workflow from tilde to absolute in '/home/runner' for compatibility with the environment.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -199,10 +199,10 @@ jobs:
           generate_release_notes: true
           files: |
             ./sdk/**/build/outputs/aar/*.aar
-            ~/.m2/repository/com/github/ibm-verify/**/*.aar
-            ~/.m2/repository/com/github/ibm-verify/**/*.pom
-            ~/.m2/repository/com/github/ibm-verify/**/*.module
-            ~/.m2/repository/com/github/ibm-verify/**/*.jar
+            /home/runner/.m2/repository/com/github/ibm-verify/**/*.aar
+            /home/runner/.m2/repository/com/github/ibm-verify/**/*.pom
+            /home/runner/.m2/repository/com/github/ibm-verify/**/*.module
+            /home/runner/.m2/repository/com/github/ibm-verify/**/*.jar
             ./sdk/IBM-Verify-SDK_code-coverage-report.zip
 
   job_summary:
