--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,4 @@ sdk/.idea/migrations.xml
 # Demo app configuration files (contain sensitive data)
 **/config.properties
 examples/mfa_demo/google-services.json
+.bob/mcp.json
